# geography_US_presidents_speeches

./: .gitignore  README.md  index.html  main.py  pyproject.toml
output/tables/: coordinates.csv
src/: combine_speeches.py  generate_barplot.py  generate_map.py  generate_map_all.py  generate_map_geo_center.py  generate_map_geo_center_21st.py  get_coordinates.py  join_coordinates.py  process_text.py
